tests/src/frontend/typechecking/invalid/assign_dot3.sk
mutable class Foo() {
  mutable fun method(Int): void {
    void
  }
}

fun main(): void {
  foo = mutable Foo();
  fakeMethod: Int -> void = (_ -> void);
  foo.!method = fakeMethod;
  print_raw("Fail")
}
